// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecondarySection unit tests should render correctly - with id, title and height 1`] = `
.c1 {
  margin: 0 auto;
  max-width: 750px;
  padding: 10px;
  height: inherit;
}

.c0 {
  min-height: 300px;
  background: #f7f7F7;
}

.c2 {
  color: #419a1c;
  font-size: 30px;
  margin: 20px 0;
}

<div>
  <section
    class="c0"
    height="300px"
    id="my-id"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      >
        section-title
      </h2>
      Hello
    </div>
  </section>
</div>
`;

exports[`SecondarySection unit tests should render correctly 1`] = `
.c1 {
  margin: 0 auto;
  max-width: 750px;
  padding: 10px;
  height: inherit;
}

.c0 {
  min-height: 600px;
  background: #f7f7F7;
}

.c2 {
  color: #419a1c;
  font-size: 30px;
  margin: 20px 0;
}

<div>
  <section
    class="c0"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
      />
      Hello
    </div>
  </section>
</div>
`;
